# Sentiment_Analysis_app

./: app.py  pyproject.toml  requirements.txt
backend/: app.py  requirements.txt
frontend/: streamlit_app.py
