[project]
name = "sentiment-analysis-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.134.0",
    "joblib>=1.5.3",
    "nltk>=3.9.3",
    "numpy>=2.2.6",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
